<resources>
    <string name="app_name">Yuscope</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sign Out</string>

    <string name="nav_to_website"> Website </string>
    <string name="nav_link_to_website"> http://www.google.com </string>

    <string name="nav_about_us"> About us </string>
    <string name="nav_link_about_us"> http://www.google.com </string>

    <string name="nav_youtube_channel"> Youtube </string>
    <string name="nav_link_youtube_channel"> http://www.youtube.com/channel/UCVHFbqXqoYvEWM1Ddxl0QDg </string>

    <string name="nav_instagram"> Instagram </string>
    <string name="nav_link_instagram"> http://www.instagram.com/android </string>

    <string name="nav_facebook"> Facebook </string>
    <string name="nav_link_facebook"> http://developers.facebook.com </string>
    <string name="network_is_not_available">Network is not available</string>
    <string name="string_describe_why_do_you_need_a_location">The app needs access to a location in order to …</string>
    <string name="string_describe_why_do_you_need_a_write_ext">The app needs access to storage in order to writing logs.</string>
    <string name="subsciption_expired">Subscription Expired. Kindly Renew</string>

    <string-array name="baud_rate_array">
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>14400</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
    </string-array>

    <string-array name="line_feed_array">
        <item>No Line Ending</item>
        <item>Newline</item>
        <item>Carriage return</item>
        <item>Both NL &amp; CR</item>
    </string-array>

    <string-array name="data_bits_array">
        <item>8</item>
    </string-array>

    <string-array name="parity_check_array">
        <item>none</item>
    </string-array>

    <string-array name="stop_bit_array">
        <item>1</item>
    </string-array>

    <string-array name="flow_control_array">
        <item>OFF</item>
    </string-array>

    <string-array name="data_format_array">
        <item>ASCII</item>
        <item> HEX</item>
    </string-array>

</resources>
